syntax = "proto3";

package auth.local.v1;

import "third_party/validate/validate.proto";

option go_package = "mandacode.com/accounts/auth/proto/auth/local/v1;localauthv1";

service LocalAuthService {
  // Login a user with email and password
  rpc Login(LocalLoginRequest) returns (LocalLoginResponse);
}

//
// Login messages
//
message LocalLoginRequest {
  string email = 1 [ (validate.rules).string = {email : true} ];
  string password = 2 [ (validate.rules).string = {min_len : 8 max_len : 64} ];
}

message LocalLoginResponse {
  string user_id = 1 [ (validate.rules).string = {uuid : true} ];
  string access_token = 2 [ (validate.rules).string = {min_len : 1} ];
  string refresh_token = 3 [ (validate.rules).string = {min_len : 1} ];
}
